NAMESPACES_TO_INCLUDE/NAMESPACES_TO_EXCLUDE options added
This option used to filter-out which namespaces are need to be discovered or not.

--- a/apm/cloud-native/kubernetes/7.2.0/egagent.yaml
+++ b/apm/cloud-native/kubernetes/7.2.0/egagent.yaml
@@ -62,6 +62,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.hostIP
+        - name: NAMESPACES_TO_INCLUDE
+          value: "*"
+        #- name: NAMESPACES_TO_EXCLUDE
+          #value: "default"              
         volumeMounts:
         - name: var-run
           mountPath: /var/run
