--- a/infra/cloud-native/kubernetes/latest/eginnovations.yaml
+++ b/infra/cloud-native/kubernetes/latest/eginnovations.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -42,3 +41,13 @@ subjects:
   name: eginnovations
   namespace: eg-infra-mon
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: eginnovations-token
+  namespace: eg-infra-mon
+  annotations:
+    kubernetes.io/service-account.name: eginnovations
+type: kubernetes.io/service-account-token
+---
+  
